fix: spacing

--- a/src/App.css
+++ b/src/App.css
@@ -300,7 +300,7 @@ body {
 }
 
 .spacer {
-  height: 15vh;
+  height: 10vh;
 }
 .rotating-panel {
   width: 90%;
